Code style fix.